test/bad/generics/def01.px

func f(x: T) def
    return

f(2)
